jumping text solved - a little complicated :)

--- a/w21tuesday/mysolution/jumping.css
+++ b/w21tuesday/mysolution/jumping.css
@@ -1,3 +1,7 @@
+span{
+    display: inline-block;
+}
+
 .jumping span, #demo span {
     display: inline-block;
 
